Changelog for Yii User Management Module (Yum) 

New in 0.8:
- reworked messaging System (thyseus)
- added new Relation widget that fixed MANY_MANY DropDownList problems (thyseus)
- Wrapped Yum::t() around Yii::t() to allow easier translations (thyseus)
- Renamed YumHelper to Yum (thyseus)
- changed menu Navigation to one big, hierarchical menu displayed as a treeview (thyseus)
- added yumSettings and yumTextSettings (thyseus) 
- added differences between profile versions in admin View (thyseus)
- repaired Messages Validation (thyseus)
- Yum now tries to use the application layout by default. This can be
  configured in the application configuration (thyseus)
- Added CEmailValidator to email profile field (thyseus)
- Made users/admin CGridView filterable (thyseus)
- Added AllowRegistration & AllowRecovery in Module Configuration
- Added quick Login widget (thyseus)
- Fixed registration form and enabled YumPasswordValidator to registration Form
- added qwerty's CPasswordValidator and ability to configure the password requirements in the Application configuration (renamed to YumPasswordValidator)

New in 0.7:
- Added User Control Panel (thyseus)
- fixed many glitches of 0.6
- rearranged submodule hierarchy
- added useYiiCheckAccess() in module config if you want to use yii's checkAccess() method
- a user now can only administrate User he should be able to

New in 0.6:
Features:
- Added confirmation for Account deletion (thyseus)
- Renamed disableEmailActivation to enableEmailActivation (defaults to true) (thyseus)
- Registration Form is now more intelligent and saves already inserted profile Fields after Validation (thanks to peterlap...@hotmail.com)
- Added Layout for installation
- Added Yum class (tomasz.suchanek)
- Added YumMenuItemHelper class (tomasz.suchanek)
- Added YumWebModule class (tomasz.suchanek)
- Added profile field grouping functionality (tomasz.suchanek)